# monodex

./: .gitignore  .rush-qdrant-warnings-rushstack-warning.json  CHANGELOG.md  CLEANUP.md  CODE_ORGANIZATION_POLICY.md  Cargo.toml  DESIGN.md  DEV_PLAN.md  ISSUE_25_SYNTAX_PROPOSAL.md  ISSUE_25_WORK_PLAN.md  MEMORY_CONTROL_ISSUE_18.md  README.md  justfile
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: config.json  context.json  monodex-crawl.json
schemas/: config.schema.json  context.schema.json  crawl.schema.json
src/: lib.rs  main.rs  paths.rs
src/app/: cli.rs  config.rs  context.rs  mod.rs  util.rs
src/app/commands/: audit_chunks.rs  crawl.rs  dump_chunks.rs  init_db.rs  mod.rs  purge.rs  search.rs  test_helpers.rs  use_cmd.rs  view.rs
src/app/crawl/: mod.rs  pipeline.rs  types.rs
src/engine/: breadcrumb.rs  chunker.rs  config.rs  crawl_config.rs  embedder.rs  git_ops.rs  identifier.rs  markdown_partitioner.rs  mod.rs  package_lookup.rs  parallel_embedder.rs  partitioner.rs  schema.rs  system_info.rs  uploader.rs  util.rs
src/engine/partitioner/: debug.rs  mod.rs  node_analysis.rs  partition.rs  scoring.rs  split_search.rs  tests.rs  types.rs
src/engine/snapshots/: monodex__engine__markdown_partitioner__tests__markdown_simple.snap  monodex__engine__markdown_partitioner__tests__markdown_with_code.snap  monodex__engine__partitioner__tests__colorize_summary.snap  monodex__engine__partitioner__tests__experiments_configuration_summary.snap  monodex__engine__partitioner__tests__generate_patched_file_summary.snap  monodex__engine__partitioner__tests__ipackagejson_summary.snap  monodex__engine__partitioner__tests__iyaml_api_file_summary.snap  monodex__engine__partitioner__tests__jsonfile_summary.snap  monodex__engine__partitioner__tests__jsonfile_visualization.snap  monodex__engine__partitioner__tests__long_string_summary.snap  monodex__engine__partitioner__tests__module_minifier_plugin_summary.snap  monodex__engine__partitioner__tests__module_minifier_plugin_visualization.snap  monodex__engine__partitioner__tests__parameter_form_large_summary.snap  monodex__engine__partitioner__tests__simple_function_summary.snap  monodex__engine__partitioner__tests__small_file_summary.snap  monodex__engine__partitioner__tests__tunneled_summary.snap  rush_qdrant__engine__markdown_partitioner__tests__markdown_with_code.snap  rush_qdrant__engine__partitioner__tests__class_with_methods-2.snap  rush_qdrant__engine__partitioner__tests__class_with_methods.snap  rush_qdrant__engine__partitioner__tests__class_with_methods_summary.snap  rush_qdrant__engine__partitioner__tests__colorize_summary.snap  rush_qdrant__engine__partitioner__tests__colorize_visualization.snap  rush_qdrant__engine__partitioner__tests__environment_config_summary.snap  rush_qdrant__engine__partitioner__tests__environment_config_visualization.snap  rush_qdrant__engine__partitioner__tests__experiments_configuration_summary.snap  rush_qdrant__engine__partitioner__tests__experiments_configuration_visualization.snap  rush_qdrant__engine__partitioner__tests__generate_patched_file_summary.snap  rush_qdrant__engine__partitioner__tests__generate_patched_file_visualization.snap  rush_qdrant__engine__partitioner__tests__git_status_parser_summary.snap  rush_qdrant__engine__partitioner__tests__git_status_parser_visualization.snap  rush_qdrant__engine__partitioner__tests__ipackagejson_summary.snap  rush_qdrant__engine__partitioner__tests__ipackagejson_visualization.snap  rush_qdrant__engine__partitioner__tests__iyaml_api_file_summary.snap  rush_qdrant__engine__partitioner__tests__iyaml_api_file_visualization.snap  rush_qdrant__engine__partitioner__tests__jsonfile_partition.snap  rush_qdrant__engine__partitioner__tests__jsonfile_summary.snap  rush_qdrant__engine__partitioner__tests__jsonfile_visualization.snap  rush_qdrant__engine__partitioner__tests__large_class_from_artifact.snap  rush_qdrant__engine__partitioner__tests__long_string_summary.snap  rush_qdrant__engine__partitioner__tests__long_string_visualization.snap  (+18 more)
src/engine/storage/: api_smoke.rs  chunks.rs  database.rs  labels.rs  mod.rs  rows.rs
test_artifacts/: LargeObject.ts  NestedFunctions.ts  test.md
tests/: label_add.rs
(+46 files in other folders)
