[package]
name = "monodex"
version = "0.1.0"
edition = "2024"

[dependencies]
# ML/Embeddings
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = "0.21.0"
hf-hub = "0.4.0"

# CLI
clap = { version = "4.5.23", features = ["derive"] }

# File system
walkdir = "2.5.0"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# HTTP
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Utilities
anyhow = "1.0.93"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
twox-hash = "1.6"
serde_bytes = "0.11"
shellexpand = "3.0"
sha2 = "0.10"
num_cpus = "1.16"
rayon = "1.10"
crossbeam-channel = "0.5"

# Tree-sitter for AST parsing
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
rand = "0.9"

[dev-dependencies]
insta = { version = "1.34", features = ["yaml"] }

[features]
default = []
coreml = ["ort/coreml"]
