[package]
name = "monodex"
version = "0.0.1"
edition = "2024"
description = "Semantic search indexer for Rush monorepos using Qdrant vector database"
license = "MIT"
repository = "https://github.com/microsoft/monodex"
keywords = ["semantic-search", "qdrant", "monorepo", "embeddings", "code-search"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "test_artifacts/*",
    "scripts/*",
    "*.log",
    "crawl.log",
    "monodex.log",
    "temp.log",
]

[dependencies]
# ML/Embeddings
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
ndarray = "0.17"
tokenizers = "0.22.2"
hf-hub = "0.5.0"

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Git operations
gix = { version = "0.81", features = ["blob-diff", "revision"] }

# File system
walkdir = "2.5.0"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

# HTTP
reqwest = { version = "0.13", features = ["json", "blocking"] }

# Utilities
anyhow = "1.0.93"
uuid = { version = "1.23.0", features = ["v4", "serde"] }
twox-hash = "2.1"
serde_bytes = "0.11"
shellexpand = "3.0"
sha2 = "0.11"
num_cpus = "1.16"
rayon = "1.10"
crossbeam-channel = "0.5"

# Tree-sitter for AST parsing
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
rand = "0.10"

[dev-dependencies]
insta = { version = "1.47", features = ["yaml"] }

[features]
default = []
coreml = ["ort/coreml"]
