[package]
name = "monodex"
version = "0.4.0"
edition = "2024"
rust-version = "1.93"
description = "Semantic search indexer for Rush monorepos using local LanceDB vector storage"
license = "MIT"
repository = "https://github.com/microsoft/monodex"
keywords = ["semantic-search", "lancedb", "monorepo", "embeddings", "code-search"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "test_artifacts/*",
    "scripts/*",
    "*.log",
    "crawl.log",
    "monodex.log",
    "temp.log",
]

[dependencies]
# ML/Embeddings
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.22.2"
hf-hub = "0.5.0"

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Git operations
gix = { version = "0.81", features = ["blob-diff", "revision"] }

# File system
walkdir = "2.5.0"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
json_comments = "0.2"

# Vector database (LanceDB - embedded, in-process)
lancedb = "0.27"
arrow = "57"
arrow-array = "57"
arrow-schema = "57"
arrow-buffer = "57"

# Async runtime (needed for LanceDB)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# Utilities
anyhow = "1.0.93"
thiserror = "2.0"
chrono = "0.4"
globset = "0.4"
dirs = "5.0"
twox-hash = "2.1"
sha2 = "0.11"
hex = "0.4"
github-slugger = "0.1"
num_cpus = "1.16"
rayon = "1.10"
fs4 = "0.12"
crossbeam-channel = "0.5"
sysinfo = "0.33"

# Tree-sitter for AST parsing
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
rand = "0.10"

[dev-dependencies]
insta = { version = "1.47", features = ["yaml"] }
jsonschema = "0.45"
tempfile = "3"
serial_test = "3"

[features]
default = []
coreml = ["ort/coreml"]